lab8/nohup.out
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
    ^
IndentationError: unexpected indent
  File "logtemp.py", line 34
    sqlcmd = "DELETE FROM " + TABLE +
                                    ^
SyntaxError: invalid syntax
  File "logtemp.py", line 34
    sqlcmd1 = "DELETE FROM " + TABLE +
                                     ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "logtemp.py", line 56, in <module>
    signal.pause() # block on signal, handler is called automatically
  File "logtemp.py", line 36, in timer_handler
    cursor.execute(sqlcmd)
sqlite3.OperationalError: no such column: datetime
Traceback (most recent call last):
  File "logtemp.py", line 56, in <module>
    signal.pause() # block on signal, handler is called automatically
  File "logtemp.py", line 36, in timer_handler
    cursor.execute(sqlcmd)
sqlite3.OperationalError: no such column: datetime
